# lowkey

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.server  README.md  build.ps1  build.sh  client-run.ps1  client-run.sh  client-setup.ps1  client-setup.sh  client-start.sh  dev.sh  docker-compose.yml  run-desktop.sh  run-web.ps1  run-web.sh  server-setup.sh
.agent/workflows/: ssh.md
.config/lowkey/: session.json
.github/workflows/: deploy.yml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/lowkey/vpn/: MainActivity.kt
android-app/app/src/main/java/com/lowkey/vpn/data/: LowkeyApiService.kt  Models.kt
android-app/app/src/main/java/com/lowkey/vpn/ui/: LowkeyApp.kt
android-app/app/src/main/java/com/lowkey/vpn/ui/theme/: LowkeyTheme.kt
android-app/app/src/main/java/com/lowkey/vpn/ui/viewmodel/: MainViewModel.kt
android-app/app/src/main/java/com/lowkey/vpn/vpn/: LowkeyVpnService.kt
android-app/app/src/main/java/com/lowkey/vpn/workers/: BootReceiver.kt  ExpiryCheckWorker.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/gradle/: libs.versions.toml
migrations/: 001_initial.sql  002_payments_referrals.sql  003_promo_v2_releases.sql
vpn-client/: Cargo.toml
vpn-client/.config/lowkey/: session.json
vpn-client/src/: hysteria_client.rs  main.rs
vpn-common/: Cargo.toml
vpn-common/src/: hysteria.rs  lib.rs
vpn-desktop/: EMBEDDED_VPN.md  index.html  package-lock.json  package.json
vpn-desktop/src/: App.tsx  index.css  store.ts
vpn-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
vpn-desktop/src-tauri/src/: api.rs  hysteria.rs  lib.rs  vpn.rs
vpn-desktop/src/components/: QRCodeView.tsx
vpn-desktop/src/views/: LoginView.tsx  MainView.tsx
vpn-server/: Cargo.toml
vpn-server/src/: admin_api.rs  api.rs  auth_middleware.rs  dashboard.rs  db.rs  hysteria_server.rs  main.rs  models.rs  payment_api.rs  proxy.rs  referral_api.rs  state.rs  telegram.rs  tunnel.rs  user_api.rs  ws_tunnel.rs
web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/app/admin/: page.tsx
web/app/auth/login/: page.tsx
web/app/auth/register/: page.tsx
web/app/dashboard/: QRCodeCanvas.tsx  page.tsx
web/app/downloads/: page.tsx
web/components/: LandingPage.tsx
web/lib/: api.ts  utils.ts
web/store/: auth.ts
