[package]
name = "vpn-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-client"
path = "src/main.rs"

[dependencies]
vpn-common    = { path = "../vpn-common" }

tokio         = { version = "1",    features = ["full"] }
tun           = { version = "0.6",  features = ["async"] }
anyhow        = "1"
clap          = { version = "4",    features = ["derive"] }
serde_json    = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest       = { version = "0.12", features = ["json"] }

x25519-dalek  = { version = "2",    features = ["static_secrets", "getrandom"] }
rand          = "0.8"
