[package]
name = "vpn-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-client"
path = "src/main.rs"

[dependencies]
vpn-common   = { path = "../vpn-common" }

tokio        = { version = "1",    features = ["full"] }
anyhow       = "1"
clap         = { version = "4",    features = ["derive", "env"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }

x25519-dalek = { version = "2",    features = ["static_secrets", "getrandom"] }
rand         = "0.8"

# WebSocket transport (all platforms)
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures      = "0.3"

# ── Hysteria2 / QUIC transport ────────────────────────────────────────────────
quinn        = { version = "0.11", features = ["runtime-tokio", "rustls"] }
h3           = "0.0.8"
h3-quinn     = "0.0.10"
blake2       = "0.10"
rcgen        = "0.13"
rustls       = { version = "0.23", default-features = false, features = ["ring"] }
bytes        = "1"
# HTTP types (Request, Response, etc.) — used by h3 auth handshake
http         = "1"
# CA certificates for TLS verification
webpki-roots = "0.26"

# TUN device (Linux / macOS only)
[target.'cfg(unix)'.dependencies]
tun          = { version = "0.6",  features = ["async"] }

# WinTUN kernel driver (Windows only — system-level VPN adapter)
[target.'cfg(windows)'.dependencies]
wintun       = { version = "0.4" }
