[package]
name = "vpn-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
hkdf        = "0.12"
sha2        = "0.10"
rand        = "0.8"
