[package]
name = "vpn-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
hkdf        = "0.12"
sha2        = "0.10"
rand        = "0.8"
# BLAKE2b for Hysteria2 Salamander obfuscation
blake2      = "0.10"
# zero-copy byte buffers (shared with hysteria framing)
bytes       = "1"
# anyhow for ergonomic error handling
anyhow      = "1"
