[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-server"
path = "src/main.rs"

[dependencies]
vpn-common    = { path = "../vpn-common" }

tokio         = { version = "1",    features = ["full"] }
axum          = "0.7"
tun           = { version = "0.6",  features = ["async"] }
dashmap       = "5"
anyhow        = "1"
clap          = { version = "4",    features = ["derive", "env"] }
serde_json    = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

x25519-dalek  = { version = "2",    features = ["static_secrets", "getrandom"] }
rand          = "0.8"
