[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-server"
path = "src/main.rs"

[dependencies]
vpn-common   = { path = "../vpn-common" }

tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7",  features = ["macros", "ws"] }
tun          = { version = "0.6",  features = ["async"] }
dashmap      = "5"
anyhow       = "1"
clap         = { version = "4",    features = ["derive", "env"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures      = "0.3"
tower-http   = { version = "0.5",  features = ["cors"] }

# TUI dashboard
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }

# Database — pure-Rust TLS so no OpenSSL system dependency is needed
sqlx         = { version = "0.7",  features = ["postgres", "runtime-tokio-rustls", "chrono"] }

# Auth
jsonwebtoken = "9"
argon2       = "0.5"
chrono       = { version = "0.4",  features = ["serde"] }
rand         = "0.8"

# HTTP client (public IP detection + Telegram) — rustls-tls avoids OpenSSL
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

x25519-dalek = { version = "2",    features = ["static_secrets", "getrandom"] }
sha2         = "0.10"

# Payment / referral additions
uuid         = { version = "1",    features = ["v4", "serde"] }
base64       = "0.22"

# ── Hysteria2 / QUIC transport ────────────────────────────────────────────────
# QUIC implementation (RFC 9000)
quinn        = { version = "0.11", features = ["runtime-tokio", "rustls"] }
# HTTP/3 implementation (for Hysteria2 auth masquerading as HTTP/3)
h3           = "0.0.8"
h3-quinn     = "0.0.10"
# BLAKE2b hashing for Salamander obfuscation
blake2       = "0.10"
# Self-signed TLS certificate generation
rcgen        = "0.13"
# rustls for TLS configuration
rustls       = { version = "0.23", default-features = false, features = ["ring"] }
# bytes for efficient zero-copy buffer handling
bytes        = "1"
# HTTP types used by h3 (Response, StatusCode, etc.)
http         = "1"
