[package]
name = "lowkey-vpn-desktop"
version = "1.0.0"
description = "Lowkey VPN Desktop Client"
authors = ["Lowkey VPN"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Embedded Hysteria2 VPN protocol
vpn-common = { path = "../../vpn-common" }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
bytes = "1"
http = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
